feat: container for tables
